# rosbotxl

./: .dockerignore  .env  .gitignore  README.md  compose.override.yaml  compose.simulation.yaml  compose.yaml  docker-compose.override.yml  justfile
config/: nav2_dwb_params.yaml  nav2_dwb_webots_params.yaml  nav2_mppi_params.yaml  nav2_mppi_webots_params.yaml  nav2_rpp_params.yaml  nav2_rpp_webots_params.yaml
docker/: ros_ws_entrypoint.sh
docker/explore_lite/: Dockerfile
docker/scan_filter/: Dockerfile
explore_lite/: Dockerfile
explore_lite/explore_lite_src/: README.md
explore_lite_src/: README.md
explore_lite_src/explore_lite/: package.xml  setup.py
explore_lite_src/explore_lite/explore_lite/: explore_node.py
explore_lite_src/explore_lite/launch/: explore.launch.py
scan_filter/: Dockerfile  front_cone.py
scripts/: random_explorer.py
ws/src/explore_lite/: CMakeLists.txt  setup.py
ws/src/explore_lite/explore_lite/: explore_node.py
ws/src/explore_lite/launch/: explore.launch.py
ws/src/scan_filter/: package.xml  setup.cfg  setup.py
ws/src/scan_filter/resource/ros2run/: scan_filter
ws/src/scan_filter/scan_filter/: front_cone.py
