<?xml version="1.0"?>
<package format="3">
  <name>scan_filter</name>
  <version>0.1.0</version>
  <description>Front cone LiDAR filter for ROSbot XL</description>
  <maintainer email="maintainer@example.com">Maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
