[metadata]
name = scan_filter
version = 0.1.0
description = Lidar front-cone filter for ROSbot XL
author = Maintainer
license = Apache-2.0

[options]
packages = find:
install_requires = rclpy
python_requires = >=3.8

[options.entry_points]
console_scripts =
    front_cone = scan_filter.front_cone:main
